Fix message card from block align

--- a/idea/frontend/src/entities/message/ui/horizontalMessageCard/HorizontalMessageCard.module.scss
+++ b/idea/frontend/src/entities/message/ui/horizontalMessageCard/HorizontalMessageCard.module.scss
@@ -39,9 +39,8 @@
   }
 
   .fromBlock {
-    @include childrenMargin($marginSmall, right);
-
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 8fr;
     font-weight: 500;
     align-items: center;
 
@@ -49,6 +48,12 @@
       color: $gray600;
       font-size: $fontSizeTiny;
       line-height: 1.3;
+    }
+
+    .fromIcon {
+      @include childrenMargin(10px, right);
+      display: flex;
+      align-items: center;
     }
   }
 
